webhosting-operator/config/policy/prepull-nginx.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prepull-nginx
  labels:
    app: prepull-nginx
spec:
  selector:
    matchLabels:
      app: prepull-nginx
  template:
    metadata:
      labels:
        app: prepull-nginx
    spec:
      containers:
      - name: pause
        image: registry.k8s.io/pause:3.7
      tolerations:
      - key: dedicated-for
        value: webhosting
        effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: dedicated-for
                operator: In
                values:
                - webhosting
