webhosting-operator/config/policy/scale-up-worker-experiment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scale-up-worker
    pool: experiment
  name: scale-up-worker-experiment
  namespace: default
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: scale-up-worker
      pool: experiment
  template:
    metadata:
      labels:
        app: scale-up-worker
        pool: experiment
    spec:
      containers:
      - name: pause
        image: pause
      priorityClassName: reserve-excess-capacity
      tolerations:
      - key: dedicated-for
        value: experiment
        effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: dedicated-for
                operator: In
                values:
                - experiment
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: scale-up-worker
                pool: experiment
            topologyKey: kubernetes.io/hostname
