webhosting-operator/config/policy/scale-up-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scale-up-worker
    pool: websites
  name: scale-up-worker-websites
  namespace: default
spec:
  replicas: 5
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: scale-up-worker
      pool: websites
  template:
    metadata:
      labels:
        app: scale-up-worker
        pool: websites
    spec:
      containers:
      - name: pause
        image: pause
      priorityClassName: reserve-excess-capacity
      tolerations:
      - key: dedicated-for
        value: websites
        effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: dedicated-for
                operator: In
                values:
                - websites
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: scale-up-worker
                pool: websites
            topologyKey: kubernetes.io/hostname
