webhosting-operator/config/policy/shard-leases.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: label-shard-leases
spec:
  rules:
  - name: label-shard-leases
    match:
      any:
      - resources:
          names:
          - webhosting-operator-*
          namespaces:
          - webhosting-operator-system
          kinds:
          - Lease
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            shard: webhosting-operator
